# zeroTrustAI

./: .gitignore  LICENSE  README.md  pyproject.toml
zerotrustai/benchmarking/: inference.py
zerotrustai/models/: config.py  loader.py  quantize.py
zerotrustai/utils/: data.py
